# letter-shell

./: .gitignore  LICENSE  README.md  shell.c  shell.h  shell_cfg.h  shell_ext.c  shell_ext.h  shell_port.c  shell_port.h
demo/easy_for_keil/: shell_all.c  shell_all.h  shell_cfg_user.h
demo/easy_for_keil/ringbuffer/: ringbuffer.h
demo/easy_for_keil/stm32_HAL_adapt/: stm32_HAL_adapt.c  stm32_HAL_adapt.h
demo/easy_transplant/: readme.md  shell_all.c  shell_all.h  shell_cfg_user.h
demo/easy_transplant/call_demo/: user_main.c
demo/easy_transplant/ringbuffer/: ringbuffer.c
demo/easy_transplant/stm32_HAL_adapt/: stm32_HAL_adapt.c  stm32_HAL_adapt.h
demo/esp-idf/: CMakeLists.txt  readme.md  shell.lf  shell_cfg.h  shell_cfg_user.h  shell_port.c  shell_port.h
demo/segger-rtt/: readme.md  shell_port.c
demo/stm32-freertos/: shell_cfg.h  shell_cfg_user.h  shell_port.c  shell_port.h
demo/stm32-hal/: shell_port.c  shell_port.h
demo/x86-gcc/: CMakeLists.txt  CmakeLists.txt  main.c  makefile  shell.lds  shell_cfg.h  shell_cfg_user.h  shell_cpp.cpp  shell_port.c  shell_port.h
extensions/cpp_support/: readme.md  shell_cpp.h
extensions/fs_support/: readme.md  shell_fs.c  shell_fs.h
extensions/game/: game.c  readme.md
extensions/game/2048/: 2048.c
extensions/game/pushbox/: pushbox.c
extensions/log/: log.c  log.h  readme.md
extensions/shell_enhance/: readme.md  shell_cmd_group.c  shell_cmd_group.h  shell_passthrough.c  shell_passthrough.h  shell_secure_user.c  shell_secure_user.h
extensions/telnet/: readme.md  telnetd.c  telnetd.h
src/: shell.c  shell.h  shell_cfg.h  shell_cmd_list.c  shell_companion.c  shell_companion.h  shell_ext.c  shell_ext.h
tools/: shellTools.py
